// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[component]: Spinner Should match default variant 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-86397r"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 75px; height: 75px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.75"
            stroke-width="4.5"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;

exports[`[component]: Spinner Should match fixed variant 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-11kauw"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 75px; height: 75px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.75"
            stroke-width="4.5"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;
